@@ -108,3 +108,8 @@ LDFLAGS=
 # Additional libraries to link with.
 #
 LIBS=
+
+#
+# A Bourne-compatible shell.
+#
+SHELL=/sbin/sh
